--- a/Friday.ERP.Client/Pages/Inventory/Components/Moledules/CustomCardBox.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Components/Moledules/CustomCardBox.razor
@@ -5,7 +5,7 @@
         <div class="d-flex justify-space-between">
             <MudText Typo="Typo.body2" Color="Color.Dark">@ProductCode</MudText>
             <MudText Typo="Typo.body2" Color="ProductTotalStock < 10 ? Color.Error : Color.Primary">
-                @ProductTotalStock left
+                @ProductTotalStock ကျန်
             </MudText>
         </div>
         <div class="d-flex justify-center my-6">
@@ -18,7 +18,7 @@
             @if (ProductPrice is not null)
             {
                 <MudText Typo="Typo.body2" Color="Color.Dark">
-                    @ProductPrice ks
+                    @ProductPrice ကျပ်
                 </MudText>
             }
         </div>
