--- a/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
@@ -1,24 +1,24 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Address" SecondText="@Address"/>
-            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@ContactPerson"/>
-            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@ContactPhone"/>
+            <CustomLabelAndLabel FirstText="လိပ်စာ" SecondText="@Address"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်" SecondText="@ContactPerson"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်ဖုန်း" SecondText="@ContactPhone"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Delivery Service Name" SecondText="@DeliveryServiceName"/>
-            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@DeliveryContactPerson"/>
-            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@DeliveryContactPhone"/>
+            <CustomLabelAndLabel FirstText="ကားဂိတ်/delivery အမည်" SecondText="@DeliveryServiceName"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်" SecondText="@DeliveryContactPerson"/>
+            <CustomLabelAndLabel FirstText="ဆက်သွယ်ရန်ဖုန်း" SecondText="@DeliveryContactPhone"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Remark" SecondText="@Remark"/>
+            <CustomLabelAndLabel FirstText="မှတ်ချက်" SecondText="@Remark"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
     </DialogContent>
     <DialogActions>
-        <CustomButton Label="Back" OnClick="@Back" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
+        <CustomButton Label="ထွက်မည်" OnClick="@Back" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
     </DialogActions>
 </MudDialog>
 
