--- a/Friday.ERP.Client/Pages/Inventory/Components/Templates/ProductPage.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Components/Templates/ProductPage.razor
@@ -2,12 +2,12 @@
 <MudProgressLinear Color="Color.Primary" Class="mb-4" Indeterminate="@IsLoading"/>
 <MudGrid Spacing="2">
     <MudItem sm="12" md="@(CreateButton is null ? 6 : 4)" Class="align-self-center">
-        <MudText Typo="Typo.h6">Purchases</MudText>
+        <MudText Typo="Typo.h6">ပစ္စည်းများ</MudText>
     </MudItem>
     <MudItem sm="12" md="3" Class="align-self-center">
         @* Todo *@
         <MudAutocomplete T="string?"
-                         Label="Category"
+                         Label="ပစ္စည်းအမျိုးအစား"
                          Clearable="true"
                          ResetValueOnEmptyText="true"
                          Dense="true"
@@ -35,7 +35,7 @@
         <MudItem sm="12">
             <div class="d-flex d-column justify-center flex-grow-1" style="height: 50vh;">
                 <div class="align-self-center">
-                    <MudText Typo="Typo.caption">No Products Yet!</MudText>
+                    <MudText Typo="Typo.caption">ပစ္စည်းများ မရှိသေးပါ</MudText>
                 </div>
             </div>
         </MudItem>
