--- a/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryCategoryDialog.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryCategoryDialog.razor
@@ -7,7 +7,7 @@
     <DialogContent>
         <MudForm @ref="_form" @bind-IsValid="@_success" @bind-Errors="@_errors">
             <MudGrid Spacing="2">
-                <CustomLabelAndInput FirstText="Category Color">
+                <CustomLabelAndInput FirstText="ပစ္စည်းအမျိုးအစား အ‌ရောင်">
                     <MudItem sm="2" md="2" lg="2" Class="align-self-center">
                         <MudPaper Elevation="0" Style="@($"border: {CategoryColor}; background-color: {CategoryColor}")" Class="pa-2">&nbsp;</MudPaper>
                     </MudItem>
@@ -15,7 +15,7 @@
                         <MudColorPicker Required="@(!IsUpdate)" @bind-Text="CategoryColor" Margin="Margin.Dense" Variant="Variant.Outlined" ColorPickerView="ColorPickerView.Palette"/>
                     </MudItem>
                 </CustomLabelAndInput>
-                <CustomLabelAndStringField FirstText="Category Name" @bind-BindValue="@CategoryName" Required="@(!IsUpdate)"/>
+                <CustomLabelAndStringField FirstText="ပစ္စည်းအမျိုးအစား အမည်" @bind-BindValue="@CategoryName" Required="@(!IsUpdate)"/>
             </MudGrid>
             <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
         </MudForm>
@@ -24,12 +24,12 @@
         @if (IsUpdate)
         {
             <CustomButton
-                Label="Remove" IsLoading="_isLoading" OnClick="@DialogDelete" Color="Color.Error" Variant="Variant.Text" FullWidth="false"/>
+                Label="ဖျက်မည်" IsLoading="_isLoading" OnClick="@DialogDelete" Color="Color.Error" Variant="Variant.Text" FullWidth="false"/>
         }
         <CustomButton
-            Label="Cancel" IsLoading="_isLoading" OnClick="@DialogCancel" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
+            Label="ထွက်မည်" IsLoading="_isLoading" OnClick="@DialogCancel" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
         <CustomButton
-            Label="@(IsUpdate ? "Update" : "Create")" IsLoading="_isLoading" OnClick="@(IsUpdate ? DialogUpdate : DialogSubmit)" Variant="Variant.Text" FullWidth="false"/>
+            Label="@(IsUpdate ? "ပြင်မည်" : "အသစ်ထည့်မည်")" IsLoading="_isLoading" OnClick="@(IsUpdate ? DialogUpdate : DialogSubmit)" Variant="Variant.Text" FullWidth="false"/>
     </DialogActions>
 </MudDialog>
 
@@ -65,7 +65,7 @@
             var result = await HttpRepo.DisableCategory(CategoryGuid);
             if (result)
             {
-                Snackbar.Add("Category Disabled", Severity.Success);
+                Snackbar.Add("ရွေးချယ်ထားသော ပစ္စည်းအမျိုးအစား ကိုဖျက်ပြီးပါပြီ", Severity.Success);
             }
 
             MudDialog!.Close(DialogResult.Ok(result));
@@ -90,7 +90,7 @@
             );
             if (result.isSuccess)
             {
-                Snackbar.Add("Category Created", Severity.Success);
+                Snackbar.Add("ပစ္စည်းအမျိုးအစား အသစ်ထည့်ပြီးပါပြီ", Severity.Success);
             }
 
             MudDialog!.Close(DialogResult.Ok(result.isSuccess));
@@ -116,7 +116,7 @@
             );
             if (result.isSuccess)
             {
-                Snackbar.Add("Category Updated", Severity.Success);
+                Snackbar.Add("ရွေးချယ်ထားသော ပစ္စည်းအမျိုးအစား ကိုပြင်ပြီးပါပြီ", Severity.Success);
             }
 
             MudDialog!.Close(DialogResult.Ok(result.isSuccess));
